<resources>
    <string name="app_name">NMedia</string>
    <string name="textOnScreen">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Like</string>
    <string name="description_share_button">Share</string>
    <string name="description_post_views">Post views</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="description_save_button">Save</string>
    <string name="description_icon_edit">Edit</string>
    <string name="edit_post">Edit post</string>
    <string name="description_edit_post_close_button">Close edit post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="description_attachment">Attachment</string>
    <string name="chooser_open_video">Open video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s post</string>
    <string name="push_format_exception">Invalid Push message format</string>
    <string name="notification_new_post">User %1$s published a new post %2$s</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.</string>
    <string name="remove_error">Remove error</string>
    <string name="save_error">Failed to save post</string>
    <string name="like_error">Like Add Error</string>
    <string name="dislike_error">Dislike Add Error</string>
    <string name="save_refresh">Refresh</string>
    <string name="unread_posts">There are unread messages:</string>
    <string name="menu_save">menu save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="description_remove_photo">Remove photo</string>
    <string name="image_error">Image pick error</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sign_in">SignIn</string>
    <string name="menu_sign_up">SignUp</string>
    <string name="enter_text">Enter your login and password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="person_icon_description">Person icon</string>
    <string name="user_name">User name</string>
    <string name="username_field">Username field</string>
    <string name="password_icon_description">Password Icon</string>
    <string name="sign_in">SignIn</string>
    <string name="error_auth">Incorrect login or password</string>
    <string name="must_login">You must login</string>
    <string name="need_auth">Authorization required</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are you sure you want to go out?</string>
    <string name="registration">Registration</string>
    <string name="description_avatar">Avatar</string>
    <string name="description_add_avatar">Add Avatar</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_registration">Registration error</string>
    <string name="remove_avatar">Remove avatar</string>
    <string name="push_message">You\'ve got message</string>
    <string name="ad_description">ad</string>
    <string name="today_text">Today</string>

</resources>