<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:textColor="@color/sign_in_menu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/avatar_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/double_common_spacing"
        app:cardCornerRadius="60dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
        app:strokeColor="@color/selector_text_input"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_24"
            tools:src="@tools:sample/avatars[1]"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/remove_avatar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:background="@color/sign_in_menu"
            android:contentDescription="@string/remove_avatar"
            android:src="@drawable/ic_edit_close"
            android:tint="@android:color/white" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/avatar_buttons"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/double_common_spacing"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/avatar_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_text">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_photo_sign_up"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/description_select_photo"
            android:textSize="12sp"
            app:icon="@drawable/ic_add_photo_24"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_photo_sign_up"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/description_take_photo"
            android:textSize="12sp"
            app:icon="@drawable/ic_camera_24"
            app:iconGravity="textStart" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_buttons"
        app:startIconContentDescription="@string/person_icon_description"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nickname"
            android:hint="@string/nickname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_layout"
        app:startIconContentDescription="@string/person_icon_description"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Login"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_login_layout"
        app:startIconContentDescription="@string/password_icon_description"
        app:startIconDrawable="@drawable/ic_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_layout"
        app:startIconContentDescription="@string/password_icon_description"
        app:startIconDrawable="@drawable/ic_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/registration"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:textSize="20sp"
        app:cornerRadius="10dp"/>

    <ProgressBar
        android:id="@+id/progress_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>